--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "ts-storage-wrapper",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@edemagbenyo/ts-storage-wrapper",
+  "version": "0.0.1",
+  "description": "Wrapper around TS ",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vitest",
+    "test": "vitest run",
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "lint": "tsc",
+    "ci": "pnpm run test && pnpm run build",
+    "release": "pnpm run test && pnpm run build && pnpm changeset publish"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "@changesets/cli": "^2.26.1",
     "tsup": "^7.0.0",
     "typescript": "^5.1.3",
     "vitest": "^0.32.2"
