--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@edemagbenyo/ts-storage-wrapper",
+  "private": "false",
   "version": "0.0.1",
   "description": "Wrapper around TS ",
   "main": "./dist/index.js",
