--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@edemagbenyo/ts-storage-wrapper",
+  "name": "ts-storage-wrapper",
   "private": "false",
   "version": "0.0.2",
   "description": "Wrapper around TS ",
