--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.3.1",
     "@changesets/cli": "^2.26.1",
+    "@types/node": "^20.3.1",
+    "jsdom": "^22.1.0",
     "tsup": "^7.0.0",
     "typescript": "^5.1.3",
     "vitest": "^0.32.2"
